--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
        <section>
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:example@email.com">shashank@email.com</a></p>
+    <p>Email: <a href="mailto:shashank@email.com">shashank@email.com</a></p>
 </section>
 
 
